# maze

./: README.md  maze.cabal  out.txt  stack.yaml
app/: Main.hs
src/: Maze.hs
