name:                maze
version:             0.1.0.0
synopsis:            A simple command-line maze generator
description:         Please see README.md
homepage:            http://github.com/TomSmeets/maze
license:             MIT
license-file:        LICENSE
author:              Tom Smeets
maintainer:          Tom.TSmeets@Gmail.com
category:            Command Line
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Maze
  build-depends:       base >= 4.7 && < 5, linear, mtl, random
  default-language:    Haskell2010

executable maze
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base, maze, linear, random
  default-language:    Haskell2010

source-repository head
  type:     git
  location: git://github.com/TomSmeets/maze.git
